@@ -58,7 +58,7 @@ public class ManageLocationsAction extends AbstractAction {
             listenerLoc = VSDecoderManager.instance().getVSDecoderPreferences().getListenerPosition();
 
             // Handle Reporters
-            ReporterManager rmgr = jmri.InstanceManager.reporterManagerInstance();
+            ReporterManager rmgr = jmri.InstanceManager.getDefault(jmri.ReporterManager.class);
             String[] reporterNameArray = rmgr.getSystemNameArray();
             Object[][] reporterTable = new Object[reporterNameArray.length][6];
             reporterMap = new HashMap<String, PhysicalLocation>();
@@ -77,16 +77,16 @@ public class ManageLocationsAction extends AbstractAction {
                 } else {
                     reporterTable[i][0] = s;
                     reporterTable[i][1] = false;
-                    reporterTable[i][2] = new Float(0.0f);
-                    reporterTable[i][3] = new Float(0.0f);
-                    reporterTable[i][4] = new Float(0.0f);
+                    reporterTable[i][2] = Float.valueOf(0.0f);
+                    reporterTable[i][3] = Float.valueOf(0.0f);
+                    reporterTable[i][4] = Float.valueOf(0.0f);
                     reporterTable[i][5] = false;
                 }
                 i++;
             }
 
             // Handle Blocks
-            BlockManager bmgr = jmri.InstanceManager.blockManagerInstance();
+            BlockManager bmgr = jmri.InstanceManager.getDefault(jmri.BlockManager.class);
             String[] blockNameArray = bmgr.getSystemNameArray();
             Object[][] blockTable = new Object[blockNameArray.length][6];
             blockMap = new HashMap<String, PhysicalLocation>();
